hphp/test/slow/dynamic_methods/strings_with_colons.php.expectf
string(1) "X"
string(1) "X"
string(1) "X"
string(1) "X"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
====

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "X"
NULL
string(1) "X"
object(X) (0) {
}

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "X"
NULL
string(1) "Y"
object(Y) (0) {
}
----

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "X"
NULL
string(1) "X"
object(X) (0) {
}

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "Y"
NULL
string(1) "Y"
object(Y) (0) {
}
----

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "X"
NULL
string(1) "X"
object(X) (0) {
}

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "Y"
NULL
string(1) "Y"
object(Y) (0) {
}
----

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "X"
NULL
string(1) "X"
object(X) (0) {
}

Warning: Decoding instance method dyn without $this! in %s on line 18
string(1) "Y"
NULL
string(1) "Y"
object(Y) (0) {
}
====

Fatal error: Call to undefined function W::non() in %s on line 18
